--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -78,6 +78,14 @@ code {
   }
 }
 
+.customnavbarcolor {
+  background-color: rgb(250, 250, 250);
+}
+
+.customnavbarblack {
+  background-color: black !important;
+}
+
 .colorfade2 {
   transition: all 0.8s;
   margin: 4px;
