--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -1,6 +1,7 @@
 ::-webkit-scrollbar {
   width: 8px;
   height: 10px;
+  display: none;
 }
 
 /* Track */
@@ -24,33 +25,35 @@
 
 html {
   font-size: 14px;
+  background-color: black;
+  min-width: 100vw;
+  max-width: 100vw;
 
   @media (min-width: 100px) {
-    min-width: 120vw !important;
-    font-size: 15px;
+    font-size: 13px;
   }
 
   @media (min-width: 576px) {
-    min-width: 108vw !important;
-    font-size: 16px;
+    font-size: 14.5px;
   }
 
   @media (min-width: 768px) {
-    min-width: 100vw !important;
     font-size: 16px;
   }
 
-  background-color: white;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: white;
 }
 
 code {
@@ -70,7 +73,6 @@ code {
     #ecf0f1
   );*/
 
-  background-size: 1200% 1200%;
   -webkit-animation: BackgroundAnimation 70s ease infinite;
   -moz-animation: BackgroundAnimation 70s ease infinite;
   -o-animation: BackgroundAnimation 70s ease infinite;
