--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -28,6 +28,7 @@ html {
   background-color: black;
   min-width: 100vw;
   max-width: 100vw;
+  overflow: scroll;
 
   @media (min-width: 100px) {
     font-size: 13px;
@@ -109,6 +110,7 @@ code {
 }
 
 .colorfade {
+  color: white;
   transition: all 0.8s;
   margin: 4px;
   &:hover {
@@ -118,19 +120,28 @@ code {
   }
 }
 
+.customtextshadow:hover {
+  text-shadow: 1px 1px 0.5px white;
+}
+
 .customnavbarcolor {
   background-color: rgb(250, 250, 250);
 }
 
 .customnavbarblack {
-  background-color: black !important;
+  background-color: transparent !important;
 }
 
 .colorfade2 {
+  color: white !important;
+  background-color: black !important;
   transition: all 0.8s;
   margin: 4px;
-  &:hover {
-    background-color: red;
+  &:hover,
+  &:active {
+    color: red !important;
+    background-color: black !important;
+    border: 1px solid red !important;
     transition: all 0.8s;
     margin: 4px;
   }
@@ -197,4 +208,51 @@ code {
   & > * {
     animation: progress 1.5s ease-in-out forwards;
   }
+}
+
+.cardcontainer {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 5%;
+  border-radius: 10px;
+  margin-bottom: 0.5%;
+}
+
+.customheading {
+  font-size: 70px;
+  font-weight: 600;
+  background-image: conic-gradient(black, #ee4b2b);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+.customheading2 {
+  font-size: 70px;
+  font-weight: 600;
+  background-image: linear-gradient(to right, #553c9a 45%, #ee4b2b);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+.customheading3 {
+  font-size: 70px;
+  font-weight: 600;
+  background-image: conic-gradient(#ee4b2b, white);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+.progress-bar {
+  background-image: linear-gradient(to right, #553c9a 45%, #ee4b2b);
+  color: transparent;
+}
+
+.nav-link {
+  color: black !important;
+}
+
+.nav-link:focus {
+  color: black !important;
 }
