fix text alignment issues in project cards

--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -217,6 +217,15 @@ code {
   margin-bottom: 0.5%;
 }
 
+// .cardcontainer {
+//   position: relative;
+//   padding: 5%;
+//   border-radius: 10px;
+//   margin-bottom: 0.5%;
+//   box-shadow: 25px 0 20px -20px rgba(0, 0, 0, 0.45),
+//     -25px 0 20px -20px rgba(0, 0, 0, 0.45);
+// }
+
 .customheading {
   font-size: 70px;
   font-weight: 600;
