--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -23,6 +23,14 @@
   background: black;
 }
 
+body.modal-open > :not(.modal) {
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+}
+
 html {
   font-size: 14px;
   background-color: black;
